<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">


    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">


        <TableRow android:padding="5dp">

            <Switch
                android:id="@+id/switch_power"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:text="@string/switch_power"
                android:textSize="24sp" />

        </TableRow>

        <TableRow android:padding="5dp">

            <Switch
                android:id="@+id/switch_lamp"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:text="@string/switch_lamp"
                android:textSize="24sp" />


        </TableRow>

        <TableRow android:padding="5dp">

            <TextView
                android:id="@+id/textview_projector_message"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:minLines="4"
                android:scrollHorizontally="false"
                android:text="@string/projector_message_default"
                android:textSize="18sp" />
        </TableRow>

        <TableRow android:padding="5dp">

            <TextView
                android:id="@+id/textview_connection"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_marginEnd="8dp"
                android:text="@string/connection_status"
                android:textSize="18sp"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/textview_connectionStatus"
                android:layout_weight="0.5"
                android:text="@string/status_disconnected"
                android:textSize="18sp" />

        </TableRow>

        <TableRow android:padding="5dp">

            <TextView
                android:id="@+id/textview_lamp_hrs_label"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_marginEnd="8dp"
                android:text="@string/lamp_hours_label"
                android:textSize="18sp"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/textview_lamp_hrs"
                android:layout_weight="0.5"
                android:textSize="18sp" />

        </TableRow>

        <TableRow android:padding="5dp">

            <TextView
                android:id="@+id/textview_projector_error_label"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_marginEnd="8dp"
                android:text="@string/pref_error"
                android:textSize="18sp"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/textview_projector_error"
                android:layout_weight="0.5"
                android:textSize="18sp" />

        </TableRow>

        <TableRow android:padding="5dp">

            <TextView
                android:id="@+id/textview_projector_addr_label"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_marginEnd="8dp"
                android:text="@string/projector_addr"
                android:textSize="18sp"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/textview_projector_addr"
                android:layout_weight="0.5"
                android:textSize="18sp" />

        </TableRow>

        <TableRow android:padding="5dp">

            <TextView
                android:id="@+id/textview_client_addr_label"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_marginEnd="8dp"
                android:text="@string/client_addr"
                android:textSize="18sp"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/textview_client_addr"
                android:layout_weight="0.5"
                android:textSize="18sp"
                />

        </TableRow>

        <TableRow android:padding="5dp">

            <TextView
                android:id="@+id/textview_projector_mac_label"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_marginEnd="8dp"
                android:text="@string/pref_conn_mac"
                android:textSize="18sp"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/textview_projector_mac"
                android:layout_weight="0.5"
                android:textSize="18sp"
                />

        </TableRow>

        <TableRow android:padding="5dp">

            <TextView
                android:id="@+id/textview_projector_resolution_label"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_marginEnd="8dp"
                android:text="@string/pref_resolution"
                android:textSize="18sp"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/textview_projector_resolution"
                android:layout_weight="0.5"
                android:textSize="18sp"
                />

        </TableRow>

        <TableRow android:padding="5dp">

            <TextView
                android:id="@+id/textview_projector_firmware_label"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_marginEnd="8dp"
                android:text="@string/pref_version"
                android:textSize="18sp"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/textview_projector_firmware"
                android:layout_weight="0.5"
                android:textSize="18sp"
                />

        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>